Fixed issue with strong styling not showing

--- a/src/style.less
+++ b/src/style.less
@@ -52,6 +52,9 @@ small {
   font-size: 0.707rem;
   color: @color-s800;
 }
+strong {
+  font-weight: 700;
+}
 h1 {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
@@ -60,9 +63,6 @@ h2, h3, h4, h5, h6 ,p {
   max-width: 33rem;
   margin-left: auto;
   margin-right: auto;
-  strong {
-    font-weight: inherit;
-  }
 }
 h5 {
   color: @color-p700;
